tests/error/ImportTemplateError.js
export class ImportTemplateError extends Error {
}
